# holodexDesktop

./: .gitignore  CMakeLists.txt  createPage.sh
UI/headers/: MainWidget.h
UI/sources/: MainWidget.cpp  main.cpp
UI/template/: template.cpp  template.h  template.ui
UI/ui_files/: MainWidget.ui
